Display the gradient code
- add selectText function to make it easier for the user to copy the
  gradient
- wrap the initiation code in an IIFE
- check if the submitted degree value is a number and reset to 0 if not
- improve CSS

--- a/index.html
+++ b/index.html
@@ -4,35 +4,54 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;400;600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
     <title>Gradient Generator</title>
   </head>
   <body>
-    <form id="gradient" class="gradient">
-      <div>
-        <label for="picker-1">Color 1:</label>
-        <input id="picker-1" type="color" name="color1" value="#b5caf9" />
+    <div class="container">
+      <h1>Generate your gradient</h1>
+      <form id="gradient" class="gradient">
+        <div>
+          <label for="picker-1">Color 1:</label>
+          <input id="picker-1" type="color" name="color1" value="#b5caf9" />
+        </div>
+        <div>
+          <label for="picker-2">Color 2:</label>
+          <input id="picker-2" type="color" name="color2" value="#aad186" />
+        </div>
+        <div class="split-container">
+          <label for="split">Split:</label>
+          <input
+            value="50"
+            type="range"
+            id="split"
+            name="split"
+            min="0"
+            max="100"
+          />
+        </div>
+        <div>
+          <label for="direction">Direction:</label>
+          <input
+            type="text"
+            id="direction"
+            name="direction"
+            value="90°"
+            maxlength="4"
+          />
+        </div>
+      </form>
+      <div class="code-container">
+        <div class="code-title">Your CSS code</div>
+        <div class="code-to-copy click-me" id="target"></div>
       </div>
-      <div>
-        <label for="picker-2">Color 2:</label>
-        <input id="picker-2" type="color" name="color2" value="#aad186" />
-      </div>
-      <div>
-        <label for="split">Split:</label>
-        <input
-          value="50"
-          type="range"
-          id="split"
-          name="split"
-          min="0"
-          max="100"
-        />
-      </div>
-      <div>
-        <label for="direction">Direction:</label>
-        <input type="text" id="direction" name="direction" value="90°" />
-      </div>
-    </form>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
