--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
           <div class="code-to-copy click-me" id="target"></div>
         </div>
       </div>
-      <div class="container-flex container-inspiration">
-        <h3>Get Inspired</h3>
+      <div class="container-flex container-inspiration" id="container-inspiration">
+       <!-- <h3>Get Inspired</h3>
         <div class="inspiration inspiration-1">
           #005AA7 <i class="fas fa-long-arrow-alt-right"></i>#FFFDE4
         </div>
@@ -77,6 +77,7 @@
         </div>
         <div class="inspiration inspiration-6">
           #f4d03f<i class="fas fa-long-arrow-alt-right"></i>#16a085
+        </div> -->
         </div>
       </div>
     </div>
